--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #d4e2ed;
 }
 body
 {
@@ -11,7 +12,7 @@ body
     justify-content: center;
     align-items: center;
     min-height:100vh;
-    background: #edf1f4;
+    background:#edf1f4;
 }
 .calculator
 {
@@ -19,7 +20,7 @@ body
     width: 340px;
     padding:20px;
     border-radius: 20px;
-    box-shadow:15px 15px 20px rgba(0,0,0,0.1), -15px -15px 20px #fffb;
+    box-shadow:10px 5px 10px rgba(0,0,0,0.1), -10px -10px 10px #fffb;
 }
 .calculator .buttons
 {
@@ -37,7 +38,7 @@ body
     color: #5166d6;
     height:100px;
     line-height: 100px;
-    box-shadow:inset 5px 5px 10px rgba(0,0,0,0.1) 
+    box-shadow:inset 5px 5px 5px rgba(0,0,0,0.1) 
     inset -5px -5px 20px #fff;
     border-radius:10px;
     margin-bottom: 12px;
